--- a/templates/createaccount.html
+++ b/templates/createaccount.html
@@ -10,6 +10,22 @@
       <div class="starter-template">
         <h1>Create account</h1>
       </div>
+
+      <div>
+        <form method="post">
+            <div class="form-group">
+            <label>Username</label>
+            <input type="text" class="form-control">
+            </div>
+
+            <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Create account</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
