--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,12 +16,8 @@
         <li class="{{'active' if active_tab == 'kebab'}}"><a href="/kebab">Kebab</a></li>
         <li class="{{'active' if active_tab == 'about'}}"><a href="/about">About</a></li>
         <li class="{{'active' if active_tab == 'contact'}}"><a href="/contact">Contact</a></li>
-        <li class="{{'active' if active_tab == 'sign_in'}}"><a href="/sign_in">Sign In</a></li>
+        <li class="{{'active' if active_tab == 'sign_in'}}"><a href="/sign_in">Log In</a></li>
         <li class="{{'active' if active_tab == 'create_account'}}"><a href="/create_account">Create Account</a></li>
-
-
-
-
         </ul>
     </div><!--/.nav-collapse -->
     </div>
