refactor, add drinks

--- a/yuuhpizzakebab/templates/navbar.html
+++ b/yuuhpizzakebab/templates/navbar.html
@@ -12,8 +12,9 @@
     <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
         <li class="{{'active' if active_tab == 'home'}}"><a href="/">Home</a></li>
-        <li class="{{'active' if active_tab == 'pizza'}}"><a href="/pizza">Pizza</a></li>
-        <li class="{{'active' if active_tab == 'kebab'}}"><a href="/kebab">Kebab</a></li>
+        <li class="{{'active' if active_tab == 'pizzas'}}"><a href="/pizzas">Pizzas</a></li>
+        <li class="{{'active' if active_tab == 'kebabs'}}"><a href="/kebabs">Kebabs</a></li>
+        <li class="{{'active' if active_tab == 'drinks'}}"><a href="/drinks">Drinks</a></li>
         <li class="{{'active' if active_tab == 'about'}}"><a href="/about">About</a></li>
         <li class="{{'active' if active_tab == 'contact'}}"><a href="/contact">Contact</a></li>
         <li class="{{'active' if active_tab == 'sign_in'}}"><a href="/sign_in">Log In</a></li>
