--- a/yuuhpizzakebab/templates/kebabs.html
+++ b/yuuhpizzakebab/templates/kebabs.html
@@ -13,6 +13,7 @@
         <table class="table table-bordered">
             <thead>
             <tr>
+                <th></th>
                 <th>Kebab</th>
                 <th>Price</th>
             </tr>
@@ -20,6 +21,7 @@
             <tbody>
                 {% for k in kebabs %}
                 <tr>
+                    <td><img src="{{ k.image_url }}" style="width: 75px; height: 75px;"></td>
                     <td>{{ k.name }}</td>
                     <td>{{ k.price }}</td>
                 </tr>
