--- a/yuuhpizzakebab/templates/pizzas.html
+++ b/yuuhpizzakebab/templates/pizzas.html
@@ -13,6 +13,7 @@
         <table class="table table-bordered">
             <thead>
             <tr>
+                <th></th>
                 <th>Pizza</th>
                 <th>Toppings</th>
                 <th>Price</th>
@@ -21,6 +22,7 @@
             <tbody>
                 {% for p in pizzas %}
                 <tr>
+                    <td><img src="{{ p.image_url }}" style="width: 75px; height: 75px;"></td>
                     <td>{{ p.name }}</td>
                     <td>{{ p.toppings_as_string() }}</td>
                     <td>{{ p.price }}</td>
