--- a/yuuhpizzakebab/templates/login.html
+++ b/yuuhpizzakebab/templates/login.html
@@ -8,19 +8,19 @@
   <body>
     <div class="container">
       <div class="starter-template">
-        <h1>Sign in</h1>
+        <h1>Log in</h1>
       </div>
 
       <div>
-        <form method="post">
+        <form action="" method="post">
             <div class="form-group">
             <label>Username</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="username">
             </div>
 
             <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control">
+            <input type="password" class="form-control" name="password">
             </div>
 
             <button type="submit" class="btn btn-primary">Log in</button>
