--- a/yuuhpizzakebab/templates/createaccount.html
+++ b/yuuhpizzakebab/templates/createaccount.html
@@ -12,15 +12,15 @@
       </div>
 
       <div>
-        <form method="post">
+        <form action="" method="post">
             <div class="form-group">
             <label>Username</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="username">
             </div>
 
             <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control">
+            <input type="password" class="form-control" name="password">
             </div>
 
             <button type="submit" class="btn btn-primary">Create account</button>
