add ui for creating, deleting, updating kebabs

--- a/yuuhpizzakebab/templates/base.html
+++ b/yuuhpizzakebab/templates/base.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="/static/favicon.ico">
 
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
-    <link href="static/css/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
+    <link href="/static/css/starter-template.css" rel="stylesheet">
 
     <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.4.1/less.min.js"></script>
@@ -32,8 +32,8 @@
     <!-- JavaScript at the bottom for fast page loading -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="static/js/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/static/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
     <!-- Additional JavaScript libraries and plugins... -->
     {% block js %}
