update index page

--- a/yuuhpizzakebab/templates/index.html
+++ b/yuuhpizzakebab/templates/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="starter-template">
         <h1>Yuuh Pizza Kebab</h1>
-        <p class="lead">Welcome to Yuuh Pizza Kebab.<br>Feel free to browse our pizzas and kebabs.</p>
+        <p class="lead">Welcome to Yuuh Pizza Kebab.<br>Feel free to browse our <a href="/pizzas">pizzas</a> and <a href="/kebabs">kebabs</a>.</p>
       </div>
     </div>
   </body>
