--- a/yuuhpizzakebab/templates/navbar.html
+++ b/yuuhpizzakebab/templates/navbar.html
@@ -11,23 +11,55 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-        <li class="{{'active' if active_tab == 'home'}}"><a href="/">Home</a></li>
-        <li class="{{'active' if active_tab == 'pizzas'}}"><a href="/pizzas">Pizzas</a></li>
-        <li class="{{'active' if active_tab == 'kebabs'}}"><a href="/kebabs">Kebabs</a></li>
-        <li class="{{'active' if active_tab == 'drinks'}}"><a href="/drinks">Drinks</a></li>
-        {% if session.is_admin %}
-            <li class="{{'active' if active_tab == 'toppings'}}"><a href="/toppings">Toppings</a></li>
-        {% endif %}
-        <li class="{{'active' if active_tab == 'about'}}"><a href="/about">About</a></li>
-        <li class="{{'active' if active_tab == 'contact'}}"><a href="/contact">Contact</a></li>
-        <li class="navbar-text"></li>
-        {% if not session.logged_in %}
-            <li class="{{'active' if active_tab == 'login'}}"><a href="/login">Log In</a></li>
-            <li class="{{'active' if active_tab == 'create_account'}}"><a href="/create_account">Create Account</a></li>
-        {% else %}
-            <li class="navbar-text"><p>Logged in as {{ session['username'] }}</p></li>
-            <li class=""><a href="/logout">Log out</a></li>
-        {% endif %}
+            <li class="{{ 'active' if request.path == url_for('index') }}">
+                <a href="{{ url_for('index') }}">Home</a>
+            </li>
+
+            <li class="{{ 'active' if request.path == url_for('list_pizzas') }}">
+                <a href="{{ url_for('list_pizzas') }}">Pizzas</a>
+            </li>
+
+            <li class="{{ 'active' if request.path == url_for('list_kebabs') }}">
+                <a href="{{ url_for('list_kebabs') }}">Kebabs</a>
+            </li>
+
+            <li class="{{ 'active' if request.path == url_for('list_drinks') }}">
+                <a href="{{ url_for('list_drinks') }}">Drinks</a>
+            </li>
+
+            {% if session.is_admin %}
+                <li class="{{ 'active' if request.path == url_for('list_toppings') }}">
+                    <a href="{{ url_for('list_toppings') }}">Toppings</a>
+                </li>
+            {% endif %}
+
+            <li class="{{ 'active' if request.path == url_for('about') }}">
+                <a href="{{ url_for('about') }}">About</a>
+            </li>
+
+            <li class="{{ 'active' if request.path == url_for('contact') }}">
+                <a href="{{ url_for('contact') }}">Contact</a>
+            </li>
+
+            <li class="navbar-text">
+            </li>
+
+            {% if not session.logged_in %}
+                <li class="{{ 'active' if request.path == url_for('login') }}">
+                    <a href="{{ url_for('login') }}">Log In</a>
+                </li>
+                <li class="{{ 'active' if request.path == url_for('create_account') }}">
+                    <a href="{{ url_for('create_account') }}">Create Account</a>
+                </li>
+            {% else %}
+                <li class="navbar-text">
+                    <p>Logged in as {{ session['username'] }}</p>
+                </li>
+
+                <li class="">
+                    <a href="{{ url_for('logout') }}">Log out</a>
+                </li>
+            {% endif %}
         </ul>
     </div><!--/.nav-collapse -->
     </div>
