--- a/yuuhpizzakebab/templates/drink/drinks.html
+++ b/yuuhpizzakebab/templates/drink/drinks.html
@@ -9,33 +9,34 @@
     <div class="container">
       <div class="starter-template">
         <h1>Drinks</h1>
-      </div>
+
         <table class="table table-bordered">
             <thead>
-            <tr>
-                <th></th>
-                <th>Drink</th>
-                <th>Price</th>
-                {% if session.is_admin %}
-                <th><a href="/drink/create">Add new</a></th>
-                <th></th>
-                {% endif %}
-            </tr>
+                <tr>
+                    <th></th>
+                    <th>Drink</th>
+                    <th>Price</th>
+                    {% if session.is_admin %}
+                        <th><a href="{{ url_for('create_drink') }}">Add new</a></th>
+                        <th></th>
+                    {% endif %}
+                </tr>
             </thead>
             <tbody>
                 {% for d in drinks %}
-                <tr>
-                    <td><img src="{{ d.image_url }}" style="width: 75px; height: 75px;"></td>
-                    <td>{{ d.name }}</td>
-                    <td>{{ d.price }}</td>
-                    {% if session.is_admin %}
-                    <td><a href="/drink/edit/{{ d.id }}">Edit</a></td>
-                    <td><a href="/drink/delete/{{ d.id }}">Delete</a></td>
-                    {% endif %}
-                </tr>
+                    <tr>
+                        <td><img src="{{ d.image_url }}" style="width: 75px; height: 75px;"></td>
+                        <td>{{ d.name or 'Nameless drink' }}</td>
+                        <td>{{ d.price }}</td>
+                        {% if session.is_admin %}
+                        <td><a href="/drink/edit/{{ d.id }}">Edit</a></td>
+                        <td><a href="/drink/delete/{{ d.id }}">Delete</a></td>
+                        {% endif %}
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
   </body>
 </html>
