--- a/yuuhpizzakebab/templates/drink/edit_drink.html
+++ b/yuuhpizzakebab/templates/drink/edit_drink.html
@@ -8,28 +8,28 @@
   <body>
     <div class="container">
       <div class="starter-template">
-        <h1>{{ drink.name }}</h1>
-      </div>
+        <h1>{{ drink.name if drink else 'New Drink' }}</h1>
 
-      <div>
-        <form action="" method="post">
-            <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" name="drink_name" value="{{ drink.name }}">
-            </div>
+        <div>
+            <form action="" method="post">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" name="drink_name" value="{{ drink.name if drink }}">
+                </div>
 
-            <div class="form-group">
-            <label>Price</label>
-            <input type="number" class="form-control" name="drink_price" value="{{ drink.price_without_dollar_sign() }}">
-            </div>
+                <div class="form-group">
+                    <label>Price</label>
+                    <input type="number" class="form-control" name="drink_price" value="{{ drink.price_without_dollar_sign() if drink }}">
+                </div>
 
-            <div class="form-group">
-            <label>Image URL</label>
-            <input type="url" class="form-control" name="drink_image_url" value="{{ drink.image_url }}">
-            </div>
+                <div class="form-group">
+                    <label>Image URL</label>
+                    <input type="url" class="form-control" name="drink_image_url" value="{{ drink.image_url if drink }}">
+                </div>
 
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
       </div>
     </div>
   </body>
