--- a/yuuhpizzakebab/templates/kebab/edit_kebab.html
+++ b/yuuhpizzakebab/templates/kebab/edit_kebab.html
@@ -8,28 +8,28 @@
   <body>
     <div class="container">
       <div class="starter-template">
-        <h1>{{ kebab.name }}</h1>
-      </div>
+        <h1>{{ kebab.name if kebab else 'New Kebab' }}</h1>
 
-      <div>
-        <form action="" method="post">
-            <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" name="kebab_name" value="{{ kebab.name }}">
-            </div>
+        <div>
+            <form action="" method="post">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" name="kebab_name" value="{{ kebab.name if kebab }}">
+                </div>
 
-            <div class="form-group">
-            <label>Price</label>
-            <input type="number" class="form-control" name="kebab_price" value="{{ kebab.price_without_dollar_sign() }}">
-            </div>
+                <div class="form-group">
+                    <label>Price</label>
+                    <input type="number" class="form-control" name="kebab_price" value="{{ kebab.price_without_dollar_sign() if kebab }}">
+                </div>
 
-            <div class="form-group">
-            <label>Image URL</label>
-            <input type="url" class="form-control" name="kebab_image_url" value="{{ kebab.image_url }}">
-            </div>
+                <div class="form-group">
+                    <label>Image URL</label>
+                    <input type="url" class="form-control" name="kebab_image_url" value="{{ kebab.image_url if kebab }}">
+                </div>
 
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
       </div>
     </div>
   </body>
