--- a/yuuhpizzakebab/templates/pizza/edit_pizza.html
+++ b/yuuhpizzakebab/templates/pizza/edit_pizza.html
@@ -8,36 +8,35 @@
   <body>
     <div class="container">
       <div class="starter-template">
-        <h1>{{ pizza.name }}</h1>
+        <h1>{{ pizza.name if pizza else 'New Pizza' }}</h1>
       </div>
 
       <div>
         <form action="" method="post">
             <div class="form-group">
-            <label>Pizza</label>
-            <input type="text" class="form-control" name="pizza_name" value="{{ pizza.name }}">
+                <label>Pizza</label>
+                <input type="text" class="form-control" name="pizza_name" value="{{ pizza.name if pizza }}">
             </div>
 
             <div class="form-group">
-            <label>Price</label>
-            <input type="number" class="form-control" name="pizza_price" value="{{ pizza.price_without_dollar_sign() }}">
+                <label>Price</label>
+                <input type="number" class="form-control" name="pizza_price" value="{{ pizza.price_without_dollar_sign() if pizza }}">
             </div>
 
             <div class="form-group">
-            <label>Image URL</label>
-            <input type="url" class="form-control" name="pizza_image_url" value="{{ pizza.image_url }}">
+                <label>Image URL</label>
+                <input type="url" class="form-control" name="pizza_image_url" value="{{ pizza.image_url if pizza }}">
             </div>
 
             <div class="form-group">
-            <label>Toppings</label>
-            <br>
+                <label>Toppings</label>
+                <br>
 
-            {% for t in available_toppings %}
-                <input id="{{ t.id }}" type="checkbox" name="toppings" value="{{ t.id }}" {{ 'checked' if pizza.has_topping(t.id) }}/>
-                <label for="{{ t.id }}">{{ t.name }}</label>
-                <br />
-            {% endfor %}
-
+                {% for t in available_toppings %}
+                    <input id="{{ t.id }}" type="checkbox" name="toppings" value="{{ t.id }}" {{ 'checked' if pizza and pizza.has_topping(t.id) }}/>
+                    <label for="{{ t.id }}">{{ t.name }}</label>
+                    <br />
+                {% endfor %}
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
