--- a/yuuhpizzakebab/templates/pizza/pizzas.html
+++ b/yuuhpizzakebab/templates/pizza/pizzas.html
@@ -9,35 +9,35 @@
     <div class="container">
       <div class="starter-template">
         <h1>Pizza</h1>
-      </div>
         <table class="table table-bordered">
             <thead>
-            <tr>
-                <th></th>
-                <th>Pizza</th>
-                <th>Toppings</th>
-                <th>Price</th>
-                {% if session.is_admin %}
-                <th><a href="/pizza/create">Add new</a></th>
-                <th></th>
-                {% endif %}
-            </tr>
+                <tr>
+                    <th></th>
+                    <th>Pizza</th>
+                    <th>Toppings</th>
+                    <th>Price</th>
+                    {% if session.is_admin %}
+                        <th><a href="{{ url_for('create_pizza') }}">Add new</a></th>
+                        <th></th>
+                    {% endif %}
+                </tr>
             </thead>
             <tbody>
                 {% for p in pizzas %}
-                <tr>
-                    <td><img src="{{ p.image_url }}" style="width: 75px; height: 75px;"></td>
-                    <td>{{ p.name }}</td>
-                    <td>{{ p.toppings_as_string() }}</td>
-                    <td>{{ p.price }}</td>
-                    {% if session.is_admin %}
-                    <td><a href="/pizza/edit/{{ p.id }}">Edit</a></td>
-                    <td><a href="/pizza/delete/{{ p.id }}">Delete</a></td>
-                    {% endif %}
-                </tr>
+                    <tr>
+                        <td><img src="{{ p.image_url }}" style="width: 75px; height: 75px;"></td>
+                        <td>{{ p.name }}</td>
+                        <td>{{ p.toppings_as_string() }}</td>
+                        <td>{{ p.price }}</td>
+                        {% if session.is_admin %}
+                            <td><a href="{{ url_for('edit_pizza', pizza_id=p.id) }}">Edit</a></td>
+                            <td><a href="{{ url_for('delete_pizza', pizza_id=p.id) }}">Delete</a></td>
+                        {% endif %}
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
   </body>
 </html>
