--- a/yuuhpizzakebab/templates/topping/edit_topping.html
+++ b/yuuhpizzakebab/templates/topping/edit_topping.html
@@ -8,23 +8,23 @@
   <body>
     <div class="container">
       <div class="starter-template">
-        <h1>{{ topping.name }}</h1>
-      </div>
+        <h1>{{ topping.name if topping else 'New Topping' }}</h1>
 
-      <div>
-        <form action="" method="post">
-            <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" name="topping_name" value="{{ topping.name }}">
-            </div>
+        <div>
+            <form action="" method="post">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" name="topping_name" value="{{ topping.name if topping }}">
+                </div>
 
-            <div class="form-group">
-            <label>Price</label>
-            <input type="number" class="form-control" name="topping_price" value="{{ topping.price_without_dollar_sign() }}">
-            </div>
+                <div class="form-group">
+                    <label>Price</label>
+                    <input type="number" class="form-control" name="topping_price" value="{{ topping.price_without_dollar_sign() if topping}}">
+                </div>
 
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
       </div>
     </div>
   </body>
