--- a/yuuhpizzakebab/templates/navbar.html
+++ b/yuuhpizzakebab/templates/navbar.html
@@ -33,12 +33,12 @@
                 </li>
             {% endif %}
 
-            <li class="{{ 'active' if request.path == url_for('about') }}">
-                <a href="{{ url_for('about') }}">About</a>
+            <li class="{{ 'active' if request.path == url_for('list_active_orders') }}">
+                <a href="{{ url_for('list_active_orders') }}">Active Orders</a>
             </li>
 
-            <li class="{{ 'active' if request.path == url_for('contact') }}">
-                <a href="{{ url_for('contact') }}">Contact</a>
+            <li class="{{ 'active' if request.path == url_for('list_orders') }}">
+                <a href="{{ url_for('list_orders') }}">Orders</a>
             </li>
 
             <li class="navbar-text">
