--- a/yuuhpizzakebab/templates/kebab/kebabs.html
+++ b/yuuhpizzakebab/templates/kebab/kebabs.html
@@ -9,14 +9,19 @@
     <div class="container">
       <div class="starter-template">
         <h1>Kebab</h1>
-        <table class="table table-bordered">
+
+        <table class="table table-bordered table-hover table-responsive">
             <thead>
                 <tr>
                     <th></th>
                     <th>Kebab</th>
                     <th>Price</th>
-                    {% if session.is_admin %}
+                    {% if session.is_admin and not selecting %}
                         <th><a href="{{ url_for('create_kebab') }}">Add new</a></th>
+                        <th></th>
+                    {% endif %}
+
+                    {% if selecting %}
                         <th></th>
                     {% endif %}
                 </tr>
@@ -28,9 +33,12 @@
                         <td><img src="{{ k.image_url }}" style="width: 75px; height: 75px;"></td>
                         <td>{{ k.name or 'Nameless kebab' }}</td>
                         <td>{{ k.price }}</td>
-                        {% if session.is_admin %}
+                        {% if session.is_admin and not selecting %}
                             <td><a href="{{ url_for('edit_kebab', kebab_id=k.id) }}">Edit</a></td>
                             <td><a href="{{ url_for('delete_kebab', kebab_id=k.id) }}">Delete</a></td>
+                        {% endif %}
+                        {% if selecting %}
+                            <td><a href="{{ url_for('select_kebab', kebab_id=k.id) }}">Select</td>
                         {% endif %}
                     </tr>
                 {% endfor %}
