--- a/yuuhpizzakebab/templates/order/order_details.html
+++ b/yuuhpizzakebab/templates/order/order_details.html
@@ -10,7 +10,7 @@
       <div class="starter-template">
         <h1>{{ 'Order {} at {} from {}'.format(order.id, order.ordered_at, order.ordered_by.username) }}</h1>
 
-        <table class="table table-bordered">
+        <table class="table table-bordered table-hover table-responsive">
             <thead>
                 <tr>
                     <th>Item</th>
