--- a/yuuhpizzakebab/templates/order/orders.html
+++ b/yuuhpizzakebab/templates/order/orders.html
@@ -10,7 +10,7 @@
       <div class="starter-template">
         <h1>Orders</h1>
 
-        <table class="table table-bordered">
+        <table class="table table-bordered table-hover table-responsive">
             <thead>
                 <tr>
                     <th>Ordered By</th>
