--- a/yuuhpizzakebab/templates/topping/toppings.html
+++ b/yuuhpizzakebab/templates/topping/toppings.html
@@ -10,7 +10,7 @@
       <div class="starter-template">
         <h1>Toppings</h1>
 
-        <table class="table table-bordered">
+        <table class="table table-bordered table-hover table-responsive">
             <thead>
             <tr>
                 <th>Topping</th>
