--- a/yuuhpizzakebab/templates/kebab/edit_kebab.html
+++ b/yuuhpizzakebab/templates/kebab/edit_kebab.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>{{ kebab.name if kebab else 'New Kebab' }}</h1>
 
         <div>
