--- a/yuuhpizzakebab/templates/topping/edit_topping.html
+++ b/yuuhpizzakebab/templates/topping/edit_topping.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>{{ topping.name if topping else 'New Topping' }}</h1>
 
         <div>
