--- a/yuuhpizzakebab/templates/drink/drinks.html
+++ b/yuuhpizzakebab/templates/drink/drinks.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>Drinks</h1>
 
         <table class="table table-bordered table-hover table-responsive">
@@ -29,8 +29,8 @@
             <tbody>
                 {% for d in drinks %}
                     <tr>
-                        <td><img src="{{ d.image_url }}" style="width: 75px; height: 75px;"></td>
-                        <td>{{ d.name or 'Nameless drink' }}</td>
+                        <td><img src="{{ d.image_url }}" class="img-responsive img-rounded"></td>
+                        <td>{{ d.name }}</td>
                         <td>{{ d.price }}</td>
                         {% if session.is_admin and not selecting %}
                             <td><a href="{{ url_for('edit_drink', drink_id=d.id) }}">Edit</a></td>
