--- a/yuuhpizzakebab/templates/drink/edit_drink.html
+++ b/yuuhpizzakebab/templates/drink/edit_drink.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>{{ drink.name if drink else 'New Drink' }}</h1>
 
         <div>
