--- a/yuuhpizzakebab/templates/login.html
+++ b/yuuhpizzakebab/templates/login.html
@@ -7,24 +7,24 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>Log in</h1>
-      </div>
 
-      <div>
-        <form action="" method="post">
-            <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" name="username">
-            </div>
+        <div>
+            <form action="" method="post">
+                <div class="form-group">
+                <label>Username</label>
+                <input type="text" class="form-control" name="username">
+                </div>
 
-            <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
-            </div>
+                <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" name="password">
+                </div>
 
-            <button type="submit" class="btn btn-primary">Log in</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Log in</button>
+            </form>
+        </div>
       </div>
     </div>
   </body>
