--- a/yuuhpizzakebab/templates/order/order_details.html
+++ b/yuuhpizzakebab/templates/order/order_details.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>{{ 'Order {} at {} from {}'.format(order.id, order.ordered_at, order.ordered_by.username) }}</h1>
 
         <table class="table table-bordered table-hover table-responsive">
