--- a/yuuhpizzakebab/templates/order/orders.html
+++ b/yuuhpizzakebab/templates/order/orders.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>Orders</h1>
 
         <table class="table table-bordered table-hover table-responsive">
