--- a/yuuhpizzakebab/templates/pizza/edit_pizza.html
+++ b/yuuhpizzakebab/templates/pizza/edit_pizza.html
@@ -7,7 +7,7 @@
 <html lang="en">
   <body>
     <div class="container">
-      <div class="starter-template">
+      <div class="yuuh-pizza-kebab">
         <h1>{{ pizza.name if pizza else 'New Pizza' }}</h1>
       </div>
 
