--- a/yuuhpizzakebab/templates/login.html
+++ b/yuuhpizzakebab/templates/login.html
@@ -9,8 +9,10 @@
     <div class="container">
       <div class="yuuh-pizza-kebab">
         <h1>Log in</h1>
+        <br>
 
-        <div>
+            <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
             <form action="" method="post">
                 <div class="form-group">
                 <label>Username</label>
@@ -25,6 +27,7 @@
                 <button type="submit" class="btn btn-primary">Log in</button>
             </form>
         </div>
+      </div>
       </div>
     </div>
   </body>
