--- a/yuuhpizzakebab/templates/createaccount.html
+++ b/yuuhpizzakebab/templates/createaccount.html
@@ -9,9 +9,10 @@
     <div class="container">
       <div class="yuuh-pizza-kebab">
         <h1>Create account</h1>
-      </div>
+        <br>
 
-      <div>
+            <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
         <form action="" method="post">
             <div class="form-group">
             <label>Username</label>
@@ -25,6 +26,8 @@
 
             <button type="submit" class="btn btn-primary">Create account</button>
         </form>
+      </div>
+    </div>
       </div>
     </div>
   </body>
