--- a/yuuhpizzakebab/templates/drink/drinks.html
+++ b/yuuhpizzakebab/templates/drink/drinks.html
@@ -9,41 +9,32 @@
     <div class="container">
       <div class="yuuh-pizza-kebab">
         <h1>Drinks</h1>
-
-        <table class="table table-bordered table-hover table-responsive">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>Drink</th>
-                    <th>Price</th>
-                    {% if session.is_admin and not selecting %}
-                        <th><a href="{{ url_for('create_drink') }}">Add new</a></th>
-                        <th></th>
-                    {% endif %}
-
-                    {% if selecting %}
-                        <th></th>
-                    {% endif %}
-                </tr>
-            </thead>
-            <tbody>
+        <br>
+            <div class="row">
                 {% for d in drinks %}
-                    <tr>
-                        <td><img src="{{ d.image_url }}" class="img-responsive img-rounded"></td>
-                        <td>{{ d.name }}</td>
-                        <td>{{ d.price }}</td>
-                        {% if session.is_admin and not selecting %}
-                            <td><a href="{{ url_for('edit_drink', drink_id=d.id) }}">Edit</a></td>
-                            <td><a href="{{ url_for('delete_drink', drink_id=d.id) }}">Delete</a></td>
-                        {% endif %}
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                        <img src="{{ d.image_url }}" alt="{{ d.name }}">
+                        <div class="caption">
+                            <h3>{{ d.name }}</h3>
+                            <br>
+                            <h4>{{ d.price }}</h4>
+                            <br>
+                            <p>
+                                <div class="btn-group btn-group-justified">
+                                    <a href="{{ url_for('select_drink', drink_id=d.id) }}" class="btn btn-primary" role="button">Order</a>
 
-                        {% if selecting %}
-                            <td><a href="{{ url_for('select_drink', drink_id=d.id) }}">Select</td>
-                        {% endif %}
-                    </tr>
+                                    {% if session.is_admin %}
+                                        <a href="{{ url_for('edit_drink', drink_id=d.id) }}" class="btn btn-primary" role="button">Edit</a>
+                                        <a href="{{ url_for('delete_drink', drink_id=d.id) }}" class="btn btn-primary" role="button">Delete</a>
+                                    {% endif %}
+                                </div>
+                            </p>
+                        </div>
+                        </div>
+                    </div>
                 {% endfor %}
-            </tbody>
-        </table>
+            </div>
       </div>
     </div>
   </body>
